# iced_plugins

./: Cargo.toml  LICENSE  README.md
examples/: auto_updater_plugin.rs  counter_plugins.rs  pref_store_plugin.rs  store_helpers.rs  store_plugin.rs  tray_icon_plugin.rs  window_state_plugin.rs
plugins/auto_updater/: Cargo.toml  README.md
plugins/auto_updater/src/: lib.rs  linux.rs  macos.rs
plugins/pref_store/: Cargo.toml  README.md
plugins/pref_store/src/: lib.rs
plugins/store/: Cargo.toml  README.md
plugins/store/src/: app_name.rs  helpers.rs  lib.rs  messages.rs  plugin.rs  storage.rs
plugins/tray_icon/: Cargo.toml
plugins/tray_icon/src/: lib.rs  menu.rs
plugins/window_state/: Cargo.toml  README.md
plugins/window_state/src/: lib.rs
src/: lib.rs  plugin.rs
