[package]
name = "iced_plugins"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "plugins/auto_updater", "plugins/window_state"]

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = [
  "tokio",
] }

[dev-dependencies]
directories = "6.0"
iced_auto_updater_plugin = { path = "plugins/auto_updater" }
iced_window_state_plugin = { path = "plugins/window_state" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
