[package]
name = "iced_plugins"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  ".",
  "plugins/auto_updater",
  "plugins/store",
  "plugins/tray_icon",
  "plugins/window_state",
]

[workspace.dependencies]
directories = "6.0"
hex = "0.4"
iced = { git = "https://github.com/iced-rs/iced" }
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = "1.47"
tray-icon = "0.21"

[dependencies]
iced = { workspace = true, features = ["tokio"] }

[dev-dependencies]
directories = { workspace = true }
iced_auto_updater_plugin = { path = "plugins/auto_updater" }
iced_store_plugin = { path = "plugins/store" }
iced_tray_icon_plugin = { path = "plugins/tray_icon" }
iced_window_state_plugin = { path = "plugins/window_state" }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
