[package]
name = "iced_auto_updater_plugin"
version = "0.1.0"
edition = "2024"
description = "Auto-updater plugin for Iced applications with GitHub releases support"
license = "MIT"

[dependencies]
directories = "6.0"
hex = "0.4"
iced = { git = "https://github.com/iced-rs/iced", features = ["tokio"] }
iced_plugins = { path = "../.." }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
