[package]
name = "iced_auto_updater_plugin"
version = "0.1.0"
edition = "2024"
description = "Auto-updater plugin for Iced applications with GitHub releases support"
license = "MIT"

[dependencies]
directories = { workspace = true }
futures-util = "0.3"
hex = { workspace = true }
iced = { workspace = true, features = ["tokio", "sipper"] }
iced_plugins = { path = "../.." }
libc = "0.2"
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
