[package]
name = "iced_store_plugin"
version = "0.1.0"
edition = "2024"
description = "A simple JSON-based store plugin for Iced applications"
license = "MIT OR Apache-2.0"

[dependencies]
directories = { workspace = true }
iced = { workspace = true, features = ["tokio"] }
iced_plugins = { path = "../.." }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
