[package]
name = "iced_window_state_plugin"
version = "0.1.0"
edition = "2024"
description = "Window state management plugin for Iced applications"
license = "MIT"

[dependencies]
dirs = "6.0"
iced = { git = "https://github.com/iced-rs/iced", features = ["tokio"] }
iced_plugins = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
