[package]
name = "iced_window_state_plugin"
version = "0.1.0"
edition = "2024"
description = "Window state management plugin for Iced applications"
license = "MIT"

[dependencies]
directories = { workspace = true }
iced = { workspace = true, features = ["tokio"] }
iced_plugins = { path = "../.." }
iced_store_plugin = { path = "../store" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
